--- a/Projet/Jeu/Jeu/Jeu.csproj
+++ b/Projet/Jeu/Jeu/Jeu.csproj
@@ -39,40 +39,32 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Carte.cs" />
-    <Compile Include="Case.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Map.cs" />
     <Compile Include="CreateBuilder.cs" />
     <Compile Include="Desert.cs" />
-    <Compile Include="Eau.cs" />
-    <Compile Include="Elfe.cs" />
+    <Compile Include="Mountain.cs" />
+    <Compile Include="Elf.cs" />
     <Compile Include="FactorySpace.cs" />
     <Compile Include="FactoryUnits.cs" />
-    <Compile Include="Forêt.cs" />
-    <Compile Include="ILoadStrategy.cs" />
-    <Compile Include="IUnit.cs" />
+    <Compile Include="Forest.cs" />
     <Compile Include="Space.cs" />
     <Compile Include="IStrategy.cs" />
     <Compile Include="Unit.cs" />
-    <Compile Include="Joueur.cs" />
     <Compile Include="LoadBuilder.cs" />
-    <Compile Include="Monteur.cs" />
-    <Compile Include="MonteurMap.cs" />
-    <Compile Include="Nain.cs" />
+    <Compile Include="IBuilderGame.cs" />
+    <Compile Include="Dwarf.cs" />
     <Compile Include="Orc.cs" />
-    <Compile Include="Partie.cs" />
-    <Compile Include="Peuple.cs" />
-    <Compile Include="Plaine.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="People.cs" />
+    <Compile Include="Field.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Strategy.cs" />
     <Compile Include="StrategyLarge.cs" />
     <Compile Include="StrategyMedium.cs" />
     <Compile Include="StrategySmall.cs" />
-    <Compile Include="Tour.cs" />
+    <Compile Include="Turn.cs" />
     <Compile Include="UnitDwarf.cs" />
     <Compile Include="UnitElf.cs" />
     <Compile Include="UnitOrc.cs" />
-    <Compile Include="Unité.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
