--- a/Projet/Jeu/UnitTestGame/UnitTestGame.csproj
+++ b/Projet/Jeu/UnitTestGame/UnitTestGame.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Jeu\Jeu.csproj">
+      <Project>{eed0bd2c-870d-4890-8129-e270a362c8bb}</Project>
+      <Name>Jeu</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
