--- a/Projet/Jeu/UnitTestGame/UnitTests.csproj
+++ b/Projet/Jeu/UnitTestGame/UnitTests.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{412623E7-F95E-42FE-A491-51294E0155CF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UnitTestGame</RootNamespace>
+    <RootNamespace>UnitTests</RootNamespace>
     <AssemblyName>UnitTestGame</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -50,7 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest.cs" />
+    <Compile Include="UnitTestMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
