--- a/Projet/Jeu/UnitTestGame/UnitTests.csproj
+++ b/Projet/Jeu/UnitTestGame/UnitTests.csproj
@@ -25,6 +25,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -50,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="UnitTestWrapper.cs" />
     <Compile Include="UnitTestMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -57,6 +60,10 @@
     <ProjectReference Include="..\Jeu\Jeu.csproj">
       <Project>{eed0bd2c-870d-4890-8129-e270a362c8bb}</Project>
       <Name>Jeu</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Wrapper\Wrapper.vcxproj">
+      <Project>{721de83f-3e6a-4825-8a83-a4ea662ea547}</Project>
+      <Name>Wrapper</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
