--- a/Projet/Jeu/UnitTestGame/UnitTests.csproj
+++ b/Projet/Jeu/UnitTestGame/UnitTests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="UnitTestMoves.cs" />
     <Compile Include="UnitTestWrapper.cs" />
     <Compile Include="UnitTestMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
